remove padding | correct color in dark mode

--- a/public/styles/site/_post-light.scss
+++ b/public/styles/site/_post-light.scss
@@ -63,17 +63,19 @@
         .meta-block {
             width: 100%;
             margin-bottom: 2vw;
+            .meta-title {
+                font-weight: bolder;
+            }
             .meta-value {
                 margin-bottom: 1rem !important;
                 .catname {
                     background: $light;
                     color: $dark !important;
-                    padding: 0 0.25rem;
                 }
             }
             .meta-title,
             .meta-value {
-                color: $light;
+                color: $dark;
                 text-transform: capitalize;
                 display: flex;
                 flex-wrap: wrap;
