--- a/public/styles/site/_post.scss
+++ b/public/styles/site/_post.scss
@@ -66,9 +66,8 @@
             .meta-value {
                 margin-bottom: 1rem !important;
                 .catname {
-                    background: $light;
-                    color: $dark !important;
-                    padding: 0 0.25rem;
+                    background: $dark;
+                    color: $light !important;
                 }
             }
             .meta-title,
